# number-theory

./: AGENT.md  Cargo.toml  README.md
src/: arithmetic.rs  continued_fraction.rs  diophantine.rs  dirichlet.rs  lib.rs  modular.rs  primes.rs  quadratic.rs
