[package]
name = "numtheory"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/number-theory"
description = "Number theory in Rust — primes, modular arithmetic, Diophantine equations, quadratic residues, continued fractions"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"

[dev-dependencies]
